tests/compound_literal_union_multi_field_bad.stderr
tests/compound_literal_union_multi_field_bad.sl:8:12: error: SL2044: union compound literal can initialize at most one field
